# openCV-android

./: local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  img-lib.cpp  native-lib.cpp
app/src/main/cpp/include/opencv2/: imgcodecs.hpp
app/src/main/java/com/example/myopencvndkapp/: App.java  BlurActivity.java  CheckFaceActivity.java  ImgAnliseActivity.java  MainActivity.java  MorphologyActivity.java  ThresholdActivity.java
app/src/main/java/com/example/myopencvndkapp/featureDetection/: CannyActivity.java  ContourActivity.java  HoughCirclesActivity.java  HoughLinesActivity.java  LaplacianActivity.java  RotateRectActivity.java  TemplateActivity.java  TiDuActivity.java
app/src/main/java/com/example/myopencvndkapp/util/: Constant.java  ImgAnalysisUtil.java
app/src/main/res/layout/: activity_blur.xml  activity_check_face.xml  activity_img_anlise.xml  activity_laplacian.xml  activity_main.xml  activity_morphology.xml  activity_threshod.xml  activity_ti_du.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
